chore: get all and single artisans
